--- a/playbookutils_tree.html
+++ b/playbookutils_tree.html
@@ -1,15 +1,17 @@
 {% extends 'widgets/widget_template.html' %}
 {% load custom_template %}
-
-{% block custom_title_prop %}{% if title_logo %}style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"{% endif %}{% endblock %}
+{% block custom_title_prop %}
+  {% if title_logo %}
+    style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"
+  {% endif %}
+{% endblock %}
 {% block title1 %}{{ title1 }}{% endblock %}
 {% block title2 %}{{ title2 }}{% endblock %}
-{% block custom_tools %}
-{% endblock %}
-{% block widget_content %} <!-- Main Start Block -->
-
-<!--File: playbookutils_tree.html
-Copyright (c) 2022 Splunk Inc.
+{% block custom_tools %}{% endblock %}
+{% block widget_content %}
+  <!-- Main Start Block -->
+  <!--File: playbookutils_tree.html
+Copyright (c) 2022-2025 Splunk Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -22,9 +24,8 @@ the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
 either express or implied. See the License for the specific language governing permissions
 and limitations under the License.
 -->
-
-<!-- Colors used are meant to be color blind friendly -->
-<style>
+  <!-- Colors used are meant to be color blind friendly -->
+  <style>
     /* Distinguish app run status colors */
     .tree span.success{
         color: #E0C098;
@@ -55,34 +56,33 @@ and limitations under the License.
         color: #E1E6EB;
         background-color: #2A3139;
     }
-</style>
-
-<div class="tree" style="padding:10px; font-family:monospace; line-height: 1.3">
+  </style>
+  <div class="tree"
+       style="padding:10px;
+              font-family:monospace;
+              line-height: 1.3">
     <!-- Main Div -->
-
-    {% for result in results %} <!-- loop for each result -->
-        {% if not result.data %}
-            <h4>No data found</h4>
-        {% else %}
-            <!-- This is an un-colorized version that uses the summary -->
-            <!-- {% for node in result.summary.rendered_playbook_tree %}
-                {{ node }}<br>
-            {% endfor %} -->
-            <!-- This adds color and custom formatting to the view -->
-            {% for node in result.data %}
-                <div class="node">{{ node.tree_prefix }}
-                {% if node.type == "app" %}
-                    <span class="{{node.type}}">
-                        &lt;{{node.type|title}}-{{ node.run_id }}&gt; {{ node.action }} <span class="{{ node.status }}">[{{ node.status}}]</span>
-                    </span>
-                {% else %}
-                    <span class="{{node.type}}">
-                        &lt;{{node.type|title}}-{{ node.run_id }}&gt; {{ node.name }}
-                    </span>
-                {% endif %}
-                </div>
-            {% endfor %}
-        {% endif %}
+    {% for result in results %}
+      <!-- loop for each result -->
+      {% if not result.data %}
+        <h4>No data found</h4>
+      {% else %}
+        <!-- This is an un-colorized version that uses the summary -->
+        <!-- {% for node in result.summary.rendered_playbook_tree %}{{ node }}<br>{% endfor %} -->
+        <!-- This adds color and custom formatting to the view -->
+        {% for node in result.data %}
+          <div class="node">
+            {{ node.tree_prefix }}
+            {% if node.type == "app" %}
+              <span class="{{ node.type }}">
+                &lt;{{ node.type|title }}-{{ node.run_id }}&gt; {{ node.action }} <span class="{{ node.status }}">[{{ node.status }}]</span>
+              </span>
+            {% else %}
+              <span class="{{ node.type }}">&lt;{{ node.type|title }}-{{ node.run_id }}&gt; {{ node.name }}</span>
+            {% endif %}
+          </div>
+        {% endfor %}
+      {% endif %}
     {% endfor %}
-</div>
+  </div>
 {% endblock %}
