--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,5 @@
 <!-- File: readme.html
-  Copyright (c) 2022 Splunk Inc.
+  Copyright (c) 2022-2025 Splunk Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
@@ -14,24 +14,24 @@
   <body>
     <h2>Port Information</h2>
     <p>
-        The app uses HTTP/ HTTPS protocol for communicating with the SOAR Rest APIs. Below are the default ports used by Splunk SOAR.
-        <table>
-            <tr class=plain>
-                <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Service Name</th>
-                <th>Transport Protocol</th>
-                <th>Port</th>
-            </tr>
-            <tr>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;http</td>
-                <td>tcp</td>
-                <td>80</td>
-            </tr>
-            <tr>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;https</td>
-                <td>tcp</td>
-                <td>443</td>
-            </tr>
-        </table>
+      The app uses HTTP/ HTTPS protocol for communicating with the SOAR Rest APIs. Below are the default ports used by Splunk SOAR.
+      <table>
+        <tr class=plain>
+          <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Service Name</th>
+          <th>Transport Protocol</th>
+          <th>Port</th>
+        </tr>
+        <tr>
+          <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;http</td>
+          <td>tcp</td>
+          <td>80</td>
+        </tr>
+        <tr>
+          <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;https</td>
+          <td>tcp</td>
+          <td>443</td>
+        </tr>
+      </table>
     </p>
   </body>
 </html>
